--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+
+:root {
+  --main-bg-color: rgb(250, 250, 250);
+  --main-color: rgb(40, 40, 43);
+}
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--main-bg-color);
+  color: var(--main-color);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  overflow-x: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+h1 {
+  text-align: center;
+  font-size: 1.6rem;
+  width: 100vw;
+  background-color: var(--main-color);
+  color: var(--main-bg-color);
+  margin-top: 0;
+  padding: 2vh 0;
+}
+
+form {
+  margin: 1vh 0;
+  text-align: center;
+  font-weight: bold;
+  font-size: 1.1rem;
+  color: black;
+}
+
+.state-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.conversions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+table {
+  margin: 2vh;
+  width: 20rem;
+}
+
+.table-heading {
+  padding-bottom: 1vh;
+}
+
+.col-headings > th, td {
+  border: 1px solid var(--main-color);
+  font-size: 0.95rem;
+}
+
+tfoot {
+  font-weight: bold;
+}
+
+p {
+  margin: 2rem;
+  text-align: justify;
 }
